task/BASH-6: Страница 'Партнеры'

--- a/pages/partners/index.html
+++ b/pages/partners/index.html
@@ -220,7 +220,7 @@
         </div>
     </div>
     <div class="partners-page__popup-be-partner partners-popup">
-        <div class="partners-popup__background"></div>
+        <div class="partners-popup__background" onclick="togglePartnerPopup(false)"></div>
         <div class="partners-popup__wrapper">
             <h1 class="partners-popup__title title-sm">Стань партнёром</h1>
             <label class="partners-popup-input">
